--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -149,7 +149,7 @@
                             <!-- // page title markup in banner area -->
 
                             <div id="page-title-wrapper" class="js-text-shrink" data-collection-id="561ada63e4b0a09ae301b4db" data-edit-main-image="Page Banner">
-				    <h1 id="page-title" class="page-title">{{'HARVARD UNDERGRADUATE EXULTING GROUP' if info.homepage else info.title}}</h1>
+				    <h1 id="page-title" class="page-title">{{'HARVARD COLLEGE EXULTING GROUP' if info.homepage else info.title}}</h1>
 
                             </div>
 
