--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,7 +26,7 @@
 		{% endfor %}
             </p>
 	    <p>{{ info.form.remember_me }} {{ info.form.remember_me.label }} </p>
-	    {% with messages = get_flashed_messages() %}
+	    {% with messages = get_flashed_messages(with_categories=true) %}
 	    {% if messages %}
             {% for cat, msg in messages %}
 	    {% if cat == 'error' %}
