added submitted content to html

--- a/app/templates/remove.html
+++ b/app/templates/remove.html
@@ -18,7 +18,7 @@
                     <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_9241">
                         <div class="sqs-block-content">
                             <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
-            			<a href="{{ url_for('remove', id=item.id) }}" class="sqs-block-button-element--medium sqs-block-button-element">{{ item }}</a>
+            			<a href="{{ url_for('remove', classname=item.class_name, id=item.id) }}" class="sqs-block-button-element--medium sqs-block-button-element">{{ item }}</a>
                             </div>
                         </div>
                     </div>
