--- a/app/templates/remove_confirm.html
+++ b/app/templates/remove_confirm.html
@@ -17,7 +17,7 @@
                 <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_9241">
                     <div class="sqs-block-content">
                         <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
-            			<a href="{{ url_for('remove', id=info.content.id, confirm=true) }}" class="sqs-block-button-element--medium sqs-block-button-element">Yes</a>
+            			<a href="{{ url_for('remove', id=info.content.id, confirm=true, classname=info.content.class_name) }}" class="sqs-block-button-element--medium sqs-block-button-element">Yes</a>
                         </div>
                     </div>
                 </div>
