--- a/app/templates/submit/base.html
+++ b/app/templates/submit/base.html
@@ -1,39 +1,43 @@
 {% extends "base.html" %} {% block content %}
 <div id="body" class="full-width" style="text-align: center">
+    <center>
     <p>
         Welcome {{ current_user.username }}, what <strong>holy proclamations</strong> would you like to issue today?
     </p>
     <p>
     (Or, want to <a href="{{ url_for('remove') }}">rescind</a> a previous proclamation?)
-    <div class="row sqs-row">
-        <div class="col sqs-col-4 span-4">
-            <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_9241">
-                <div class="sqs-block-content">
-                    <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
-			    <a href="/submit/client" class="sqs-block-button-element--medium sqs-block-button-element">Client</a>
+    <div style="width: 50%">
+        <div class="row sqs-row">
+            <div class="col sqs-col-4 span-4">
+                <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_9241">
+                    <div class="sqs-block-content">
+                        <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
+    			    <a href="/submit/client" class="sqs-block-button-element--medium sqs-block-button-element">Client</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col sqs-col-4 span-4">
-            <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_13048">
-                <div class="sqs-block-content">
-                    <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
-			    <a href="/submit/analyst" class="sqs-block-button-element--medium sqs-block-button-element">Analyst</a>
+            <div class="col sqs-col-4 span-4">
+                <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_13048">
+                    <div class="sqs-block-content">
+                        <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
+    			    <a href="/submit/analyst" class="sqs-block-button-element--medium sqs-block-button-element">Analyst</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col sqs-col-4 span-4">
-            <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_14063">
-                <div class="sqs-block-content">
-                    <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
-			    <a href="/submit/page" class="sqs-block-button-element--medium sqs-block-button-element">Page</a>
+            <div class="col sqs-col-4 span-4">
+                <div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-yui_3_17_2_1_1545086799498_14063">
+                    <div class="sqs-block-content">
+                        <div class="sqs-block-button-container--center" data-animation-role="button" data-alignment="center" data-button-size="medium">
+    			    <a href="/submit/page" class="sqs-block-button-element--medium sqs-block-button-element">Page</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     {% block body %} {% endblock %}
+    </center>
 </div>
 {% endblock %}
